--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -1,16 +1,16 @@
 {% if current_user.is_authenticated %}
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
-
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tasks</a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
-          <a class="dropdown-item" href="{{ url_for('tasks.add_task') }}">Add Task</a>
-          <a class="dropdown-item" href="{{ url_for('tasks.my_tasks') }}">My Tasks</a>
-        </div>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('tasks.my_tasks') }}">Explore Data</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('tasks.add_task') }}">Contribute</a>
     </li>
     <li class="nav-item dropdown">
-      
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{current_user.name}}</a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
           {% if current_user.is_admin() %}
