--- a/flaskstarter/templates/tasks/my_tasks.html
+++ b/flaskstarter/templates/tasks/my_tasks.html
@@ -5,92 +5,95 @@
 {% extends 'layouts/base.html' %}
 
 {% block body %}
-  <div class="container">
-    <div class="row mt-5">
-        <form action="{{ url_for('tasks.showall')}}" method="post" style="display:inline-block">
-          <button class="btn btn-primary active" name="showall"  type="submit"> Show All</button>
-        </form>
+{% include 'layouts/banner.html' %}
+<div class="container">
+  <div class="row justify-content-center">
+    <h2>Explore Data</h2>
+  </div>
+  <div class="row mt-5">
+    <form action="{{ url_for('tasks.showall')}}" method="post" style="display:inline-block">
+      <button class="btn btn-primary active" name="showall" type="submit"> Show All</button>
+    </form>
 
-        <form action="{{ url_for('tasks.age_filter')}}" method="post" style="display:inline-block">
-            <button class="btn btn-primary" name="age52"  type="submit"> Age = 52</button>
-        </form>
+    <form action="{{ url_for('tasks.age_filter')}}" method="post" style="display:inline-block">
+      <button class="btn btn-primary" name="age52" type="submit"> Age = 52</button>
+    </form>
 
-        <table id="data" class="table table-hover">
-                      <thead>
-                        <tr>
-                          <th>sample_id</th>
-                          <th>donor</th>
-                          <th>X</th>
-                          <th>age</th>
-                          <th>status</th>
-                          <th>dataset</th>
-                        </tr>
-                      </thead>
-                      <tbody>
+    <table id="data" class="table table-hover">
+      <thead>
+        <tr>
+          <th>sample_id</th>
+          <th>donor</th>
+          <th>X</th>
+          <th>age</th>
+          <th>status</th>
+          <th>dataset</th>
+        </tr>
+      </thead>
+      <tbody>
 
-                          {% for task in all_tasks %}
-                          <tr>
-                            <td>{{ task.sample_id }}</td>
-                            <td>{{ task.donor }}</td>
-                            <td>{{ task.X }}</td>git
-                            <td>{{ task.age }}</td>
-                            <td>{{ task.Status_on_day_collection_summary }}</td>
-                            <td>{{ task.dataset }}</td>
-                          </tr>
-                          {% endfor %}
-                      </tbody>
-                    </table>
-
-
-        <form action="{{ url_for('tasks.download')}}" method="post" style="display:inline-block">
-            <button class="btn btn-primary" name="download"  type="submit"> Download Data </button>
-        </form>
-
-        <form action="{{ url_for('tasks.get_multiselect')}}" method="post" style="display:inline-block">
-            <select multiple id="multiselect" name="multiselect" data-live-search="true" class="selectpicker" data-actions-box="true">
-                {% for val in col_values %}
-                    <option value="{{val}}">{{val}}</option>
-                {% endfor %}
-            </select>
-            <button class="btn btn-primary" id="select" name="select"  type="submit"> Select </button>
-        </form>
+        {% for task in all_tasks %}
+        <tr>
+          <td>{{ task.sample_id }}</td>
+          <td>{{ task.donor }}</td>
+          <td>{{ task.X }}</td>
+          <td>{{ task.age }}</td>
+          <td>{{ task.Status_on_day_collection_summary }}</td>
+          <td>{{ task.dataset }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
 
 
+    <form action="{{ url_for('tasks.download')}}" method="post" style="display:inline-block">
+      <button class="btn btn-primary" name="download" type="submit"> Download Data </button>
+    </form>
 
-      </div>
+    <form action="{{ url_for('tasks.get_multiselect')}}" method="post" style="display:inline-block">
+      <select multiple id="multiselect" name="multiselect" data-live-search="true" class="selectpicker"
+        data-actions-box="true">
+        {% for val in col_values %}
+        <option value="{{val}}">{{val}}</option>
+        {% endfor %}
+      </select>
+      <button class="btn btn-primary" id="select" name="select" type="submit"> Select </button>
+    </form>
 
-      <div id="chart" class="chart"></div>
+
 
   </div>
+
+  <div id="chart" class="chart"></div>
+
+</div>
 {% endblock %}
 
 {% block scripts %}
-  <script>
-    $(document).ready(function () {
-      $('#data').DataTable();
-    });
+<script>
+  $(document).ready(function () {
+    $('#data').DataTable();
+  });
 
-    $('select').selectpicker();
+  $('select').selectpicker();
 
-    document.getElementById('select').onclick = function() {
+  document.getElementById('select').onclick = function () {
     var selected = [];
-    for (var option of document.getElementById('multiselect').options)
-    {
-        if (option.selected) {
-            selected.push(option.value);
-        }
+    for (var option of document.getElementById('multiselect').options) {
+      if (option.selected) {
+        selected.push(option.value);
+      }
     }
     alert("Successfully selected the following donors for filtering" + selected);
 
-    }
+  }
+</script>
 
-  </script>
-
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script type="text/javascript">
-    var graphs = {{graphJSON | safe}};
-    Plotly.plot('chart',graphs,{});
-    </script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script type="text/javascript">
+  var graphs = {{ graphJSON | safe }};
+  Plotly.plot('chart', graphs, {});
+</script>
 
 
 {% endblock %}
