--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column justify-content-center" id="banner">
     <div id="projectName" class="d-flex justify-content-center">
-        <h4>2.5 MILLION <span>PBMC SINGLE CELL</span></h4>
+        <h4>2.5 MILLION <span>SINGLE CELL</span></h4>
     </div>
     <div id="projectAim0" class="d-flex justify-content-center">
         <h1>Explore Single-Cell Immunology</h1>
