--- a/flaskstarter/templates/layouts/base.html
+++ b/flaskstarter/templates/layouts/base.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white static-top">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('frontend.index') }}"><img src="{{url_for('static', filename='D24H_Logo.png')}}" width="273" height="129"/></a>
+      <a class="navbar-brand" href="{{ url_for('tasks.home') }}"><img src="{{url_for('static', filename='D24H_Logo.png')}}" width="273" height="129"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
