--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -1,3 +1,5 @@
+/*layput*/
+
 #navbarResponsive {
     padding-top: 45px;
 }
@@ -31,7 +33,8 @@
     color: #757779;
 }
 
-#projectAim0, #projectAim1 {
+#projectAim0,
+#projectAim1 {
     font-style: normal;
     font-weight: bold;
     font-size: 47px;
@@ -56,8 +59,8 @@
 #dashrow {
     margin-top: -75px;
     margin-bottom: 118px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 180px;
+    padding-right: 180px;
 }
 
 #dashboard {
@@ -65,8 +68,8 @@
     box-shadow: 2px 12px 60px -5px rgba(170, 170, 170, 0.35);
     border-radius: 40px;
     height: 150px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .dash-item {
@@ -99,3 +102,258 @@
     justify-items: start;
 }
 
+
+/*my_tasks*/
+
+.data {
+    margin-bottom: 100px;
+}
+
+.button {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.btn-outline-success {
+    border: 2px solid #037966;
+    box-sizing: border-box;
+    border-radius: 60px;
+    font-family: Inter;
+    font-style: normal;
+    color: #037966;
+
+}
+
+.citation {
+    height: 375px;
+    background: rgba(110, 166, 157, 0.2);
+    padding-top: 100px;
+    padding-bottom: 100px;
+    position: relative;
+    overflow-y: hidden;
+}
+
+.citation-t {
+    position: absolute;
+    bottom: -70px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 160px;
+    color: #FFFFFF;
+    z-index: 1;
+}
+
+.citation-h {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 18px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #037966;
+}
+
+.line {
+    width: 635px;
+    height: 0px;
+    border: 2px solid #FFFFFF;
+    margin-bottom: 14px;
+}
+
+.citation-text {
+    width: 635px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 140%;
+    color: #000000;
+}
+
+.citation-link {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    color: #757779;
+}
+
+.copy {
+    padding-left: 100px;
+}
+
+.btn-success {
+    border-radius: 100%;
+    background: #489587;
+    font-size: 12px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-top: -10px;
+}
+
+.footer {
+    background: rgba(239, 239, 239);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    z-index: 2;
+}
+
+.link {
+    color: #757779 !important;
+}
+
+/*landing*/
+
+.home {
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+
+.plot-container {
+    display: flex;
+    justify-content: center;
+}
+
+.intro {
+    position: relative;
+    background: rgba(110, 166, 157, 0.2);
+    padding-top: 150px;
+    padding-bottom: 150px;
+    overflow-y: hidden;
+}
+
+.intro-h {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 170%;
+    text-align: center;
+    letter-spacing: 0.22em;
+    text-transform: uppercase;
+    color: #757779;
+    margin-bottom: 30px;
+}
+
+.intro-c {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 220%;
+    text-align: center;
+    letter-spacing: 0.015em;
+    color: #275950;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 100px;
+}
+
+.intro-tb td {
+    width: 150px;
+    text-align: center;
+}
+
+.intro-tb th {
+    width: 150px;
+    height: 60px;
+    margin-bottom: 0px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+/*add-task*/
+
+.contribute {
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+
+.contribute-t {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 50%;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color: #489587;
+    margin-bottom: 30px;
+}
+
+.contribute .introduction {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 200%;
+    text-align: center;
+    letter-spacing: 0.015em;
+    color: #275950;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 100px;
+}
+
+.contribute-p {
+    padding: 150px;
+    background: rgba(110, 166, 157, 0.2);
+    border-radius: 30px;
+}
+
+.contribute-p .title {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 70px;
+    color: #489587;
+    text-align: center;
+}
+
+.contribute-p .descp {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 200%;
+    text-align: center;
+    letter-spacing: 0.015em;
+    color: #000000;
+    padding-left: 25%;
+    padding-right: 25%;
+    margin-bottom: 100px;
+}
+
+/*login*/
+
+.log-in {
+    background-image: url(../Mask_Group.png);
+    padding: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.log-container {
+    background: linear-gradient(22.33deg, #FFFFFF 4.6%, rgba(255, 255, 255, 0.32) 91.13%);    
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 80px 35px 150px;
+    width: 400px;
+}
+
+.sign-up {
+    background-image: url(../Mask_Group.png);
+    padding: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.sign-up .log-container{
+    padding: 80px 35px 100px;
+}
+
+.log-container h3 {
+    text-align: center;
+}
