--- a/flaskstarter/templates/tasks/my_tasks.html
+++ b/flaskstarter/templates/tasks/my_tasks.html
@@ -6,9 +6,9 @@
 
 {% block body %}
 {% include 'layouts/banner.html' %}
-<div class="container">
+<div class="container data">
   <div class="row justify-content-center">
-    <h2>Explore Data</h2>
+    <h1>Explore Data</h1>
   </div>
   <div class="row mt-5">
     <form action="{{ url_for('tasks.showall')}}" method="post" style="display:inline-block">
@@ -44,29 +44,40 @@
         {% endfor %}
       </tbody>
     </table>
-
-
-    <form action="{{ url_for('tasks.download')}}" method="post" style="display:inline-block">
-      <button class="btn btn-primary" name="download" type="submit"> Download Data </button>
-    </form>
-
-    <form action="{{ url_for('tasks.get_multiselect')}}" method="post" style="display:inline-block">
-      <select multiple id="multiselect" name="multiselect" data-live-search="true" class="selectpicker"
-        data-actions-box="true">
-        {% for val in col_values %}
-        <option value="{{val}}">{{val}}</option>
-        {% endfor %}
-      </select>
-      <button class="btn btn-primary" id="select" name="select" type="submit"> Select </button>
-    </form>
-
-
-
   </div>
 
-  <div id="chart" class="chart"></div>
-
+  <div class="button d-flex justify-content-center">
+    <form action="{{ url_for('tasks.download')}}" method="post" style="display:inline-block">
+      <button class="btn btn-outline-success" name="download" type="submit"> Download Full-set / Sub-set Data </button>
+    </form>
+  </div>
 </div>
+
+<div class="citation flex-column ">
+  <div class="container">
+    <div class="citation-h">
+      APA 7th edition
+    </div>
+    <div class="line">
+    </div>
+    <div class="d-flex justify-content-start">
+      <div class="citation-text" id="c1">
+        2.5 million Single Cell (2022, February 23). The Laboratory of Data Discovery for Health.
+      </div>
+      <div class="copy"> <button type="button" id="copy" class="btn btn-success"
+          onclick="copy()">Copy<br>Citation</button></div>
+
+    </div>
+
+    <div class="citation-link">
+      https://www.d24.hk/
+    </div>
+    <div class="citation-t">
+      Citation
+    </div>
+  </div>
+</div>
+{% include 'layouts/footer.html' %}
 {% endblock %}
 
 {% block scripts %}
@@ -88,12 +99,16 @@
 
   }
 </script>
+<script>
+  function copy() {
+  var $temp = $("<input>");
+  $("body").append($temp);
+  $temp.val("2.5 million Single Cell (2022, February 23). The Laboratory of Data Discovery for Health. https://www.d24.hk/").select();
+  document.execCommand("copy");
+  $temp.remove();
+  alert("copied")
 
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script type="text/javascript">
-  var graphs = {{ graphJSON | safe }};
-  Plotly.plot('chart', graphs, {});
+  }
 </script>
-
 
 {% endblock %}
