--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -35,7 +35,7 @@
     </table>
 
 
-    <form action="{{ url_for('tasks.download')}}" method="post" style="display:inline-block">
+    <form action="{{ url_for('tasks.download_file')}}" method="post" style="display:inline-block">
       <button class="btn btn-primary" name="download" type="submit"> Download Data </button>
     </form>
 
