add user upload data page

--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -5,10 +5,10 @@
       <a class="nav-link" href="#">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.my_tasks') }}">Explore Data</a>
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore Data</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.add_task') }}">Contribute</a>
+      <a class="nav-link" href="{{ url_for('tasks.contribute') }}">Contribute</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{current_user.name}}</a>
