--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -42,6 +42,12 @@
       <button class="btn btn-primary" name="download_umap" type="submit"> Download UMAP coordinates </button>
     </form>
 
+    <form action="{{ url_for('tasks.show_plot')}}" method="get" style="display:inline-block">
+      <button class="btn btn-primary" name="show_plot" type="submit"> Show Plot </button>
+    </form>
+
+
+
     <form action="{{ url_for('tasks.download_matrix')}}" method="post" style="display:inline-block">
       <button class="btn btn-primary" name="download_matrix" type="submit"> Download Matrix </button>
     </form>
@@ -59,6 +65,8 @@
 
 
   </div>
+
+    <div id="chart" class="chart"></div>
 {% endblock %}
 
 {% block scripts %}
