--- a/flaskstarter/templates/dashboard/dashboard.html
+++ b/flaskstarter/templates/dashboard/dashboard.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row mt-5">
       <div class="col-6 offset-3">
-        {{ render_form(url_for('tasks.add_task'), task_form)}}
+        Home
       </div>
     </div>
   </div>
