--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -9,11 +9,24 @@
 
 <div class="container">
   <div class="row justify-content-center">
-    <h2>Discover Plot</h2>
+    <h2>UMAP Plot</h2>
   </div>
 
+  <td>Color Option</td>
+  <td>
+    <form action="{{ url_for('tasks.show_plot')}}" method="post" style="display:inline-block">
+      <select id="opt_col" name="name_opt_col">
+          <option label=" "></option>
+          {% for val in colors %}
+          <option value="{{val}}">{{val}}</option>
+          {% endfor %}
+      </select>
+      <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit"> Select </button>
+    </form>  
+  </td>
    <div id="chart" class="chart"></div>
 </div>
+
 {% endblock %}
 
 {% block scripts %}
