--- a/flaskstarter/templates/tasks/contribute.html
+++ b/flaskstarter/templates/tasks/contribute.html
@@ -25,8 +25,8 @@
     {% endif %}
   {% endwith %}
 
-  <div class="row mt-5">
 
+  <div class="jumbotron">
     <form method="POST" action="{{ url_for('tasks.upload_file')}}" enctype="multipart/form-data">
 
       <div class="input-group">
@@ -42,15 +42,17 @@
 
 
     </form>
-    <form method="POST" action="{{ url_for('tasks.run_scClassify')}}" enctype="multipart/form-data">
+    </div>
+    <div class="jumbotron">
+    <form method="POST" action="{{ url_for('tasks.run_scClassify')}}" enctype="multipart/form-data" style="display:inline-block">
         <button class="btn btn-primary">Run Analysis</button>
     </form>
-    <form method="POST" action="{{ url_for('tasks.download_scClassify')}}" enctype="multipart/form-data">
+    <form method="POST" action="{{ url_for('tasks.download_scClassify')}}" enctype="multipart/form-data" style="display:inline-block">
         <button class="btn btn-primary">Download Analysis Results</button>
     </form>
+    </div>
 
 
-  </div>
 
 {% endblock %}
 {% block scripts %}
